--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-# /UserSettings/EditorUserSettings.asset
-# /UserSettings/Layouts/CurrentMaximizeLayout.dwlt
-# /UserSettings/Layouts/default-2021.dwlt
+/UserSettings/EditorUserSettings.asset
+/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+/UserSettings/Layouts/default-2021.dwlt
